# conecta-social

./: .gitignore  .vercelignore  docker-compose.yml  package-lock.json  package.json  vercel.json
app/: app.css  main.py  models.py  root.tsx  routes.ts  services.py  store.py  utils.py
app/components/: admin-shell.tsx  brand-mark.tsx  data-card.tsx  pagination-bar.tsx  status-badge.tsx
app/components/ui/: sonner.tsx
app/lib/: api.ts  format.ts  query-client.ts  types.ts
app/routes/: agendamentos.tsx  alertas.tsx  configuracoes.tsx  home.tsx  perfis.tsx
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/examples/: agent_smoke.rs
backend/migrations/: 0001_init.sql  0002_triagem_phone.sql  0003_triagem_chat_turns.sql
backend/src/: error.rs  main.rs  models.rs  state.rs
backend/src/routes/: appointments.rs  cron.rs  messages.rs  mod.rs  profiles.rs  stats.rs  triagem.rs  triggers.rs  units.rs  whatsapp.rs
backend/src/services/: agent.rs  jobs.rs  mod.rs  triagem_chat.rs  triggers.rs  whatsapp.rs
tests/: test_api.py
